--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unlock AI Wealth - Get Perplexity Pro & Start Earning</title>
+    <title>Earn Money Online with AI | Cometearn - Unlock Your Earning Potential</title>
+    <meta name="description" content="Discover powerful ways to earn money online using AI. Get exclusive access to Perplexity Pro, join referral programs, complete AI bounties, and boost your income with our easy step-by-step guide.">
+    <meta name="keywords" content="earn money online, earn money using AI, AI income, make money with AI, AI bounties, AI side hustle, online earnings, Cometearn, Perplexity Pro, Dub bounties">
+    <link rel="canonical" href="https://github.com/ziyaram706-dot/Cometearn">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Earn Money Online with AI | Cometearn">
+    <meta property="og:description" content="Get started today – free Pro access, AI-powered earning, bounties, and referral rewards. Unlock your potential with simple steps.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://github.com/ziyaram706-dot/Cometearn">
+    <meta property="og:image" content="YOUR_IMAGE_URL"> <!-- Replace with your actual image URL -->
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Earn Money Online with AI | Cometearn">
+    <meta name="twitter:description" content="Boost your income using AI referral programs and bounties. Step-by-step guide for beginners and experts.">
+    <meta name="twitter:image" content="YOUR_IMAGE_URL"> <!-- Replace with your actual image URL -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Cometearn",
+      "url": "https://github.com/ziyaram706-dot/Cometearn",
+      "description": "Learn how to earn money online using AI tools, referral programs, bounties, and smart strategies. Get exclusive bonuses and maximize your online income.",
+      "keywords": ["earn money online", "earn money using AI", "online income", "AI bounties", "referral program"],
+      "publisher": {
+        "@type": "Organization",
+        "name": "Cometearn"
+      }
+    }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -100,7 +128,7 @@
             </div>
             
             <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">
-                Unlock AI Wealth: Get Perplexity Pro & Start Earning
+                Earn Money Online Using AI – Step-by-Step Guide to Boost Your Income
             </h1>
             <p class="text-xl md:text-2xl mb-8 opacity-90">
                 Only Through This Exclusive Link!
@@ -128,7 +156,7 @@
     <main class="max-w-6xl mx-auto px-6 py-16">
         <section class="text-center mb-16">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-6">
-                Experience the Future of Browsing, Powered by Earning & AI
+                Why Choose AI for Earning Money Online?
             </h2>
             
             <!-- Browser Illustration -->
@@ -181,7 +209,7 @@
 
         <section class="mb-16">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">
-                Why This Offer Is Unmissable
+                Easy Ways to Earn Money Using AI and Referral Programs
             </h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="feature-card bg-white p-6 rounded-xl shadow-lg text-center relative overflow-hidden">
@@ -491,9 +519,20 @@
 
         <section class="text-center">
             <h2 class="text-3xl font-bold text-gray-800 mb-6">
-                Ready to turn AI into income? This is your chance.
+                Frequently Asked Questions About Online AI Earnings
             </h2>
-            <a href="https://pplx.ai/manuabhira24492" target="_blank" rel="noopener noreferrer" 
+            <div class="bg-white rounded-xl shadow-lg p-8 mb-8">
+                <h3 class="text-xl font-bold mb-4">How do I start earning money with AI?</h3>
+                <p class="text-gray-600 mb-4">Simply click the exclusive link above to get your free Perplexity Pro access, install Comet Browser, and follow the step-by-step guide to activate earning features.</p>
+
+                <h3 class="text-xl font-bold mb-4">Are the earnings real?</h3>
+                <p class="text-gray-600 mb-4">Yes! Through referral programs and Dub bounties, you can earn real money for sharing Comet Browser and completing AI-powered tasks.</p>
+
+                <h3 class="text-xl font-bold mb-4">Do I need any special skills?</h3>
+                <p class="text-gray-600 mb-4">No special skills required. Just follow the steps, invite friends, and participate in bounties to start earning.</p>
+            </div>
+
+            <a href="https://pplx.ai/manuabhira24492" target="_blank" rel="noopener noreferrer"
                class="inline-block bg-gradient-to-r from-green-500 to-blue-600 text-white px-12 py-6 rounded-full text-2xl font-bold hover:from-green-600 hover:to-blue-700 transition-all transform hover:scale-105 pulse-button mb-6">
                 🚀 Click to Unlock Your Bonus & Start Earning Now
             </a>
