--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earn Money Online with AI | Cometearn - Unlock Your Earning Potential</title>
     <meta name="description" content="Discover powerful ways to earn money online using AI. Get exclusive access to Perplexity Pro, join referral programs, complete AI bounties, and boost your income with our easy step-by-step guide.">
-    <meta name="keywords" content="earn money online, earn money using AI, AI income, make money with AI, AI bounties, AI side hustle, online earnings, Cometearn, Perplexity Pro, Dub bounties">
+    <meta name="keywords" content="earn money online, make money online, earn money using ai, ai earning methods, ai side hustle, best ways to earn online, passive income online, online income, remote jobs, freelance ai work, ai affiliate programs, ai earning opportunities, work from home with ai, how to make extra money online, ai rewards, digital income, earn money with browser, easy ways to earn money online, get paid by ai, earn fast money, online bounties, top earning programs, ai referrals, online job ideas, cash rewards online, part time online jobs, real earning websites, Pro access bonuses, Dub bounties, referral rewards, cash out earnings, best money making sites, trending ai earning, step by step money guide, Cometearn, Perplexity Pro, Dub payouts">
     <link rel="canonical" href="https://github.com/ziyaram706-dot/Cometearn">
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Earn Money Online with AI | Cometearn">
@@ -202,15 +202,16 @@
             </div>
             
             <p class="text-lg text-gray-600 max-w-4xl mx-auto leading-relaxed">
-                Imagine a browser that pays you to use, share, and master AI. With Comet Browser and Perplexity Pro, 
+                Discover the best ways to earn money online by using AI referral programs, freelance work, and digital bounties. Imagine a browser that pays you to use, share, and master AI. With Comet Browser and Perplexity Pro,
                 you're not just getting smart answers—you're getting paid. And with Dub, AI becomes your side hustle.
             </p>
         </section>
 
         <section class="mb-16">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">
-                Easy Ways to Earn Money Using AI and Referral Programs
+                Best Ways to Earn Fast Money Online With AI in 2025
             </h2>
+            <p class="text-center text-lg text-gray-600 mb-8">Are you searching for real, easy ways to make money online? AI-powered side hustles let you earn passive income, rewards, and payouts right from home. From referral programs and Dub bounties to freelance AI jobs, the opportunities are endless. Explore the top earning methods and join our community of online achievers!</p>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="feature-card bg-white p-6 rounded-xl shadow-lg text-center relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-20 h-20 bg-gradient-to-br from-blue-400 to-purple-500 rounded-bl-full opacity-10"></div>
@@ -522,14 +523,14 @@
                 Frequently Asked Questions About Online AI Earnings
             </h2>
             <div class="bg-white rounded-xl shadow-lg p-8 mb-8">
-                <h3 class="text-xl font-bold mb-4">How do I start earning money with AI?</h3>
-                <p class="text-gray-600 mb-4">Simply click the exclusive link above to get your free Perplexity Pro access, install Comet Browser, and follow the step-by-step guide to activate earning features.</p>
+                <h3 class="text-xl font-bold mb-4">What are the easiest AI-powered ways to make money online?</h3>
+                <p class="text-gray-600 mb-4">Simply click the exclusive link above to get your free Perplexity Pro access, install Comet Browser, and follow the step-by-step guide to activate earning features. Join referral programs and complete Dub bounties for real cash rewards.</p>
 
-                <h3 class="text-xl font-bold mb-4">Are the earnings real?</h3>
-                <p class="text-gray-600 mb-4">Yes! Through referral programs and Dub bounties, you can earn real money for sharing Comet Browser and completing AI-powered tasks.</p>
+                <h3 class="text-xl font-bold mb-4">How can I get paid fast using digital earning tools?</h3>
+                <p class="text-gray-600 mb-4">Yes! Through referral programs and Dub bounties, you can earn real money for sharing Comet Browser and completing AI-powered tasks. Cash out your earnings instantly through Dub payouts.</p>
 
-                <h3 class="text-xl font-bold mb-4">Do I need any special skills?</h3>
-                <p class="text-gray-600 mb-4">No special skills required. Just follow the steps, invite friends, and participate in bounties to start earning.</p>
+                <h3 class="text-xl font-bold mb-4">Is it possible to earn passive income with AI?</h3>
+                <p class="text-gray-600 mb-4">No special skills required. Just follow the steps, invite friends, and participate in bounties to start earning passive income online with AI tools and affiliate programs.</p>
             </div>
 
             <a href="https://pplx.ai/manuabhira24492" target="_blank" rel="noopener noreferrer"
