--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earn Money Online with AI | Cometearn - Unlock Your Earning Potential</title>
-    <meta name="description" content="Discover powerful ways to earn money online using AI. Get exclusive access to Perplexity Pro, join referral programs, complete AI bounties, and boost your income with our easy step-by-step guide.">
+    <meta name="description" content="Discover powerful ways to earn money online using AI. Get exclusive access to Perplexity Pro, join referral programs, complete AI bounties, and boost your income with our easy step-by-step guide. Start earning fast with AI-powered side hustles and passive income opportunities.">
     <meta name="keywords" content="earn money online, make money online, earn money using ai, ai earning methods, ai side hustle, best ways to earn online, passive income online, online income, remote jobs, freelance ai work, ai affiliate programs, ai earning opportunities, work from home with ai, how to make extra money online, ai rewards, digital income, earn money with browser, easy ways to earn money online, get paid by ai, earn fast money, online bounties, top earning programs, ai referrals, online job ideas, cash rewards online, part time online jobs, real earning websites, Pro access bonuses, Dub bounties, referral rewards, cash out earnings, best money making sites, trending ai earning, step by step money guide, Cometearn, Perplexity Pro, Dub payouts">
+    <meta name="google-site-verification" content="googleb89fefbe0ad8c143.html">
+    <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://github.com/ziyaram706-dot/Cometearn">
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Earn Money Online with AI | Cometearn">
-    <meta property="og:description" content="Get started today – free Pro access, AI-powered earning, bounties, and referral rewards. Unlock your potential with simple steps.">
+    <meta property="og:description" content="Get started today – free Pro access, AI-powered earning, bounties, and referral rewards. Unlock your potential with simple steps. Discover how to earn money online using AI tools and side hustles.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://github.com/ziyaram706-dot/Cometearn">
     <meta property="og:image" content="YOUR_IMAGE_URL"> <!-- Replace with your actual image URL -->
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Earn Money Online with AI | Cometearn">
-    <meta name="twitter:description" content="Boost your income using AI referral programs and bounties. Step-by-step guide for beginners and experts.">
+    <meta name="twitter:description" content="Boost your income using AI referral programs and bounties. Step-by-step guide for beginners and experts. Learn how to earn money online with AI-powered side hustles.">
     <meta name="twitter:image" content="YOUR_IMAGE_URL"> <!-- Replace with your actual image URL -->
     <script type="application/ld+json">
     {
@@ -24,12 +26,44 @@
       "@type": "WebSite",
       "name": "Cometearn",
       "url": "https://github.com/ziyaram706-dot/Cometearn",
-      "description": "Learn how to earn money online using AI tools, referral programs, bounties, and smart strategies. Get exclusive bonuses and maximize your online income.",
+      "description": "Learn how to earn money online using AI tools, referral programs, bounties, and smart strategies. Get exclusive bonuses and maximize your online income. Discover AI-powered side hustles and passive income opportunities.",
       "keywords": ["earn money online", "earn money using AI", "online income", "AI bounties", "referral program"],
       "publisher": {
         "@type": "Organization",
         "name": "Cometearn"
       }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What are the easiest AI-powered ways to make money online?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Simply click the exclusive link above to get your free Perplexity Pro access, install Comet Browser, and follow the step-by-step guide to activate earning features. Join referral programs and complete Dub bounties for real cash rewards."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How can I get paid fast using digital earning tools?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! Through referral programs and Dub bounties, you can earn real money for sharing Comet Browser and completing AI-powered tasks. Cash out your earnings instantly through Dub payouts."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Is it possible to earn passive income with AI?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No special skills required. Just follow the steps, invite friends, and participate in bounties to start earning passive income online with AI tools and affiliate programs."
+          }
+        }
+      ]
     }
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
