--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Earn Money Online with AI | Cometearn - Unlock Your Earning Potential</title>
     <meta name="description" content="Discover powerful ways to earn money online using AI. Get exclusive access to Perplexity Pro, join referral programs, complete AI bounties, and boost your income with our easy step-by-step guide. Start earning fast with AI-powered side hustles and passive income opportunities.">
     <meta name="keywords" content="earn money online, make money online, earn money using ai, ai earning methods, ai side hustle, best ways to earn online, passive income online, online income, remote jobs, freelance ai work, ai affiliate programs, ai earning opportunities, work from home with ai, how to make extra money online, ai rewards, digital income, earn money with browser, easy ways to earn money online, get paid by ai, earn fast money, online bounties, top earning programs, ai referrals, online job ideas, cash rewards online, part time online jobs, real earning websites, Pro access bonuses, Dub bounties, referral rewards, cash out earnings, best money making sites, trending ai earning, step by step money guide, Cometearn, Perplexity Pro, Dub payouts">
-    <meta name="google-site-verification" content="googleb89fefbe0ad8c143.html">
+    <meta name="google-site-verification" content="LuRbZmRGRo427X9_9V-ZEjLXR2jpJGe2kX-2bBVHrjs" />
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://github.com/ziyaram706-dot/Cometearn">
     <!-- Open Graph / Facebook -->
