--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       "name": "Cometearn",
       "url": "https://github.com/ziyaram706-dot/Cometearn",
       "description": "Learn how to earn money online using AI tools, referral programs, bounties, and smart strategies. Get exclusive bonuses and maximize your online income. Discover AI-powered side hustles and passive income opportunities.",
-      "keywords": ["earn money online", "earn money using AI", "online income", "AI bounties", "referral program"],
+      "keywords": ["earn money online", "earn money using AI", "online income", "AI bounties", "referral program", "passive income", "digital earning tools", "cash rewards", "affiliate programs", "side hustles", "AI-powered side hustles", "Comet Browser", "Dub bounties", "freelance AI jobs", "online achievers", "Pro access", "invite & earn", "instant payouts", "content creation", "referral challenges", "AI testing", "high-value tasks", "real cash rewards", "payouts", "bonus rewards", "social media posts", "creativity", "activate earning features", "Perplexity Pro"],
       "publisher": {
         "@type": "Organization",
         "name": "Cometearn"
